--- a/style.css
+++ b/style.css
@@ -3,4 +3,50 @@
 /* common styles */
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0x;
+}
+.button{
+    text-decoration: none;
+    background-color: #E02C6D;
+    border-radius: 41px;
+    padding: 10px 24px;
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 700;
+}
+.fa-arrow-right{
+    margin-left: 7px;
+}
+/* header style */
+.header-title{
+    font-size: 24px;
+    margin-top: 5%;
+    margin-left: 12%;
+}
+/* section1 style */
+.container1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.blog-info{
+    width: 45%;
+    max-width: 582px;
+    max-height: 270px;
+}
+.section-title{
+    font-size: 52px;
+}
+.blog{
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+.blog-img{
+    margin-left: 133px;
+}
+.blog-img img{
+    
+    width: 100%;
+    max-width: 440px;
+    max-height: 414px;
 }
