--- a/style.css
+++ b/style.css
@@ -34,11 +34,13 @@ body{
     max-width: 582px;
     max-height: 270px;
 }
-.section-title{
+.section-title1{
     font-size: 52px;
+    margin: 0px;
 }
 .blog{
     font-size: 16px;
+    margin-top: 0px;
     margin-bottom: 20px;
 }
 .blog-img{
@@ -49,4 +51,70 @@ body{
     width: 100%;
     max-width: 440px;
     max-height: 414px;
+}
+/* section2 style */
+.container2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
+.section-title2{
+    color: #3A3A3A;
+    font-weight: 600;
+    font-size: 28px;
+}
+.product-chart{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 30px;
+    column-gap: 30px;
+    }
+.product{
+    width: 329px;
+    height: 476px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    
+}
+.product img{
+    margin: 0px;
+    margin: 17px 15px 16px 14px;
+}
+.product-details{
+    margin-left: 14px;
+}
+.product-name{
+    font-weight: 500;
+    font-size: 28px;
+    color: #18191F;
+    margin: 0;
+    
+}
+.product-price{
+    color: rgba(0, 0, 0, 0.87);
+    font-weight: normal;
+    font-size: 24px;
+    margin-top: 6px;
+    margin-bottom: 0;
+}
+.product-rating{
+    color: #FB8200;
+    font-size: 11px;
+    margin-bottom: 0;
+}
+.rating-value{
+    color: #5E6366;
+    font-weight: bold;
+    font-size: 14px;
+    margin-bottom: 0;
+    margin-left: 8px;
+}
+.product-delivery{
+    color: #787885;
+    font-weight: bold;
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 17px;
 }
