--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 /* common styles */
 body{
     font-family: 'Poppins', sans-serif;
-    margin: 0x;
+    margin: 0px;
 }
 .button{
     text-decoration: none;
@@ -51,6 +51,10 @@ body{
     width: 100%;
     max-width: 440px;
     max-height: 414px;
+}
+.blog-img img:hover{
+    transform: scale(1.1);
+    transition: transform 2s;
 }
 /* section2 style */
 .container2{
@@ -117,4 +121,111 @@ body{
     font-size: 14px;
     margin-top: 0;
     margin-bottom: 17px;
+}
+/* section3 style */
+.reviews-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    
+}
+.reviews-container:hover {
+    transform: scale(1.05);
+    transition: transform 2s ;
+}
+.section-title3{
+    color: #3A3A3A;
+    font-weight: 600;
+    font-size: 28px;
+    color: white;
+    background-color: gray;
+}
+.reviews{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 30px;
+    column-gap: 30px;
+    
+    }
+.review{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 476px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    border-radius: 5px;
+    background-color: rgba(211, 211, 211, 0.274);
+    
+}
+.review img{
+    width: 20%;
+}
+.review-details{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+}
+.review-name{
+    font-weight: 500;
+    font-size: 28px;
+    color: #18191F;
+    margin: 0;
+    
+}
+
+
+.review-rating{
+    color: #FB8200;
+    font-size: 11px;
+    margin-bottom: 0;
+}
+
+
+.review-details{
+    color: #787885;
+    font-weight: bold;
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 17px;
+}
+/* footer style */
+footer{
+    display: flex;
+    justify-content: center;
+    background-color: #0A0826;
+    width: 100%;
+    margin-top: 100px;
+}
+.footer-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #FFFFFF;
+    padding: 50px;
+}
+.footer-content h3{
+    font-weight: bold;
+    font-size: 24px;
+    margin: 0;
+}
+.footer-content p{
+    font-weight: bold;
+    font-size: 14px;
+    color: #D9DBE1;
+    margin: 0;
+}
+.footer-content a{
+    text-decoration: none;
+    color: #FFFFFF;
+    margin-left: 16px;
+    margin-top: 17px;
+    font-size: 17px;
+    
+}
+.fa-youtube{
+    margin-right: 16px;
 }
