--- a/style.css
+++ b/style.css
@@ -30,9 +30,8 @@ body{
     align-items: center;
 }
 .blog-info{
-    width: 45%;
-    max-width: 582px;
-    max-height: 270px;
+    width: 582px;
+    height: 270px;
 }
 .section-title1{
     font-size: 52px;
@@ -49,8 +48,8 @@ body{
 .blog-img img{
     
     width: 100%;
-    max-width: 440px;
-    max-height: 414px;
+    width: 440px;
+    height: 414px;
 }
 .blog-img img:hover{
     transform: scale(1.1);
@@ -203,7 +202,7 @@ footer{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    text-align: center;
     color: #FFFFFF;
     padding: 50px;
 }
@@ -228,4 +227,85 @@ footer{
 }
 .fa-youtube{
     margin-right: 16px;
+}
+
+/* Media queries Mobile*/
+@media only screen and (max-width:688px) {
+    /* section1 style */
+    .container1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .blog-info{
+        width: 300px;
+        height: auto;
+    }
+    .blog-img{
+        margin-left: 5px;
+    }    
+    .blog-img img{
+        margin-top: 20px;
+        width: 80%;
+        height: 80%;
+    }
+    /* section2 style */
+.product-chart{
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+    column-gap: 30px;
+    }
+/* section3 style */
+.reviews{
+    display: grid;
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+    column-gap: 30px;    
+    }
+    .review{
+
+        width: 300px;        
+    }
+
+}
+/* Media queries Tablet*/
+@media only screen and (min-width: 689px) and (max-width:992px) {
+    /* section1 style */
+    .container1{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .blog-info{
+        width: 300px;
+        height: auto;
+    }
+    .blog-img{
+        margin-left: 5px;
+    }    
+    .blog-img img{
+        margin-top: 20px;
+        width: 80%;
+        height: 80%;
+    }
+    /* section2 style */
+.product-chart{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 30px;
+    column-gap: 30px;
+    }
+/* section3 style */
+.reviews{
+    display: grid;
+    grid-template-columns:repeat(2, 1fr);
+    row-gap: 30px;
+    column-gap: 30px;    
+    }
+    .review{
+
+        width: 300px;        
+    }
+
 }
