--- a/style.css
+++ b/style.css
@@ -121,6 +121,17 @@ body{
     margin-top: 0;
     margin-bottom: 17px;
 }
+.expand-button{
+    text-align: right;
+    margin-top: 50px;
+}
+.expand-button a{
+    text-decoration: none;
+    color: rgba(224, 44, 109, 0.87);
+    font-weight: bold;
+    font-size: 16px;
+    
+}
 /* section3 style */
 .reviews-container{
     display: flex;
@@ -132,7 +143,7 @@ body{
 }
 .reviews-container:hover {
     transform: scale(1.05);
-    transition: transform 2s ;
+    transition: transform 1s ;
 }
 .section-title3{
     color: #3A3A3A;
@@ -184,7 +195,7 @@ body{
 
 
 .review-details{
-    color: #787885;
+    color: #3A3A3A;
     font-weight: bold;
     font-size: 14px;
     margin-top: 0;
@@ -231,6 +242,10 @@ footer{
 
 /* Media queries Mobile*/
 @media only screen and (max-width:688px) {
+    /* header style */
+.header-title{
+    text-align: center;
+}
     /* section1 style */
     .container1{
         display: flex;
@@ -240,9 +255,12 @@ footer{
     .blog-info{
         width: 300px;
         height: auto;
+        order: 2;
     }
     .blog-img{
         margin-left: 5px;
+        order: 1;
+        margin-bottom: 20px;
     }    
     .blog-img img{
         margin-top: 20px;
@@ -276,19 +294,20 @@ footer{
         display: flex;
         flex-direction: column;
         align-items: center;
+        order: 1;
     }
     .blog-info{
-        width: 300px;
+        width: 582px;
         height: auto;
+        order: 2;
     }
     .blog-img{
+        margin-top: 40px;
         margin-left: 5px;
+        order: 1;
+        margin-bottom: 20px;
     }    
-    .blog-img img{
-        margin-top: 20px;
-        width: 80%;
-        height: 80%;
-    }
+
     /* section2 style */
 .product-chart{
     display: grid;
